--- a/style.css
+++ b/style.css
@@ -9,7 +9,17 @@ html {
 body {
     font-family: 'Roboto', sans-serif !important;
 }
+#wrapper {
+    opacity: 0;
+    transition: all 1s;
+}
 
+#loading img {
+    width: 30%;
+    margin: auto;
+    display: block;
+    padding-top: 100px;
+}
 /* header */
 .header {
     min-height: 660px;
